welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value color
    if(color.green==getCouleurSol()) {
       ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!estFaceMur()) {
  ^